--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-boilerplate-component",
-  "version": "3.4.0",
+  "name": "sj-react-component-module",
+  "version": "0.0.8",
   "description": "a react component lib",
+  "main": "./build/bundle.js",
   "repository": {
     "type": "git",
     "url": ""
@@ -19,11 +20,11 @@
     "extract-intl": "babel-node --presets latest,stage-0 -- ./internals/scripts/extract-intl.js",
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
     "preinstall": "npm run npmcheckversion",
-    "postinstall": "npm run build:dll",
     "prebuild": "npm run build:clean",
-    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress",
+    "build": "webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress",
     "build:clean": "npm run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
+    "prepublish": "npm run build",
     "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
@@ -135,6 +136,7 @@
       "jsx-a11y/mouse-events-have-key-events": 2,
       "jsx-a11y/role-has-required-aria-props": 2,
       "jsx-a11y/role-supports-aria-props": 2,
+      "jsx-a11y/no-static-element-interactions": 0,
       "max-len": 0,
       "newline-per-chained-call": 0,
       "no-confusing-arrow": 0,
@@ -148,6 +150,7 @@
         "multiline"
       ],
       "react/jsx-filename-extension": 0,
+      "react/prefer-stateless-function": 0,
       "react/jsx-no-target-blank": 0,
       "react/require-extension": 0,
       "react/self-closing-comp": 0,
