--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "invariant": "2.2.2",
     "ip": "1.1.4",
     "lodash": "4.17.2",
+    "marked": "^0.3.6",
     "minimist": "1.2.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
@@ -285,6 +286,7 @@
     "offline-plugin": "4.5.2",
     "plop": "1.7.3",
     "pre-commit": "1.1.3",
+    "raw-loader": "^0.5.1",
     "react-addons-test-utils": "15.4.1",
     "rimraf": "2.5.4",
     "shelljs": "0.7.5",
