--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sj-react-component-module",
-  "version": "0.0.8",
+  "version": "1.0.4",
   "description": "a react component lib",
   "main": "./build/bundle.js",
   "repository": {
@@ -36,7 +36,7 @@
     "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
     "generate": "plop --plopfile internals/generators/index.js",
     "lint": "npm run lint:js",
-    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts --ignore-pattern build",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:staged": "lint-staged",
     "pretest": "npm run test:clean && npm run lint",
@@ -137,13 +137,20 @@
       "jsx-a11y/role-has-required-aria-props": 2,
       "jsx-a11y/role-supports-aria-props": 2,
       "jsx-a11y/no-static-element-interactions": 0,
+      "guard-for-in": 0,
       "max-len": 0,
       "newline-per-chained-call": 0,
+      "no-nested-ternary": 0,
+      "no-useless-escape": 0,
       "no-confusing-arrow": 0,
       "no-console": 1,
+      "no-param-reassign": 0,
+      "no-restricted-syntax": [0, "ForInStatement"],
+      "no-continue": 0,
       "no-use-before-define": 0,
       "prefer-template": 2,
       "class-methods-use-this": 0,
+      "react/prefer-es6-class": 0,
       "react/forbid-prop-types": 0,
       "react/jsx-first-prop-new-line": [
         2,
@@ -157,7 +164,8 @@
       "redux-saga/no-yield-in-race": 2,
       "redux-saga/yield-effects": 2,
       "require-yield": 0,
-      "import/no-webpack-loader-syntax": 0
+      "import/no-webpack-loader-syntax": 0,
+      "import/no-duplicates": 0
     },
     "settings": {
       "import/resolver": {
@@ -224,8 +232,10 @@
     "ip": "1.1.4",
     "lodash": "4.17.2",
     "marked": "^0.3.6",
+    "material-ui": "^0.19.0",
     "minimist": "1.2.0",
     "react": "15.4.1",
+    "react-docgen": "^2.17.0",
     "react-dom": "15.4.1",
     "react-helmet": "3.2.2",
     "react-intl": "2.1.5",
@@ -233,6 +243,7 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.6",
     "react-router-scroll": "0.4.1",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.14.0",
@@ -274,6 +285,7 @@
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "0.6.3",
     "file-loader": "0.9.0",
+    "highlight.js": "^9.12.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.24.1",
     "image-webpack-loader": "2.0.0",
